--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "prop-types": "^15.7.2",
+    "ra-data-json-server": "^3.10.2",
+    "ra-data-simple-rest": "^3.10.2",
     "react": "^17.0.1",
+    "react-admin": "^3.10.2",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
